--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,7 @@
         }
     },
     "require-dev": {
+        "hautelook/alice-bundle": "^2.10",
         "justinrainbow/json-schema": "^5.2",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.0.*",
