--- a/composer.json
+++ b/composer.json
@@ -72,6 +72,9 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "test": [
+            "./vendor/bin/phpunit"
         ]
     },
     "conflict": {
