--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/php:8.1.0
+      - image: cimg/php:8.1.0
 
     steps:
       - checkout
