--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,14 +7,10 @@ jobs:
     steps:
       - checkout
 
-      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
+      - run: sudo apt update 
       - run:
          name: Install PHP libzip-dev
          command: sudo apt-get install -y libzip-dev
-
-      - run:
-         name: Install PHP zip
-         command: sudo docker-php-ext-install zip
 
       # Download and cache dependencies
       - restore_cache:
